Completed mdel init for MCMCv2