@@ -28,10 +28,7 @@ import org.cirdles.tripoli.species.nuclides.NuclidesFactory;
 import org.jetbrains.annotations.NonNls;
 
 import java.io.Serializable;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Map;
-import java.util.TreeMap;
+import java.util.*;
 
 import static org.cirdles.tripoli.constants.MassSpectrometerContextEnum.PHOENIX_SYNTHETIC;
 
@@ -79,14 +76,14 @@ public final class AnalysisMethodBuiltinFactory implements Serializable {
 
         SequenceCell sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("Ax"), "S2", 2, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb206);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
 
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("PM"), "S1", 1, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb206);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("PM"), "S2", 2, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb208);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
 
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("H1"), "S1", 1, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb208);
@@ -126,10 +123,6 @@ public final class AnalysisMethodBuiltinFactory implements Serializable {
         baselineCell.setCellMass(202.5);
 
 
-
-
-
-
         baselineCell = baselineTable.accessBaselineCellForDetector(detectorSetup.getMapOfDetectors().get("PM"), "BL1", 1);
         baselineCell.setCellMass(203.5);
 
@@ -150,87 +143,87 @@ public final class AnalysisMethodBuiltinFactory implements Serializable {
 
         SequenceCell sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("L4"), "S5", 5, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb204);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
 
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("L3"), "S4", 4, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb204);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("L3"), "S5", 5, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb205);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
 
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("L2"), "S3", 3, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb204);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("L2"), "S4", 4, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb205);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("L2"), "S5", 5, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb206);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
 
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("Ax"), "S2", 2, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb204);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("Ax"), "S3", 3, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb205);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("Ax"), "S4", 4, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb206);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("Ax"), "S5", 5, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb207);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
 
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("PM"), "S1", 1, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb204);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("PM"), "S2", 2, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb205);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("PM"), "S3", 3, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb206);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("PM"), "S4", 4, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb207);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("PM"), "S5", 5, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb208);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
 
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("H1"), "S1", 1, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb205);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("H1"), "S2", 2, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb206);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("H1"), "S3", 3, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb207);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("H1"), "S4", 4, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb208);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
 
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("H2"), "S1", 1, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb206);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("H2"), "S2", 2, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb207);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("H2"), "S3", 3, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb208);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
 
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("H3"), "S1", 1, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb207);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("H3"), "S2", 2, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb208);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
 
         sequenceCell = sequenceTable.accessSequenceCellForDetector(detectorSetup.getMapOfDetectors().get("H4"), "S1", 1, new ArrayList<>());
         sequenceCell.addTargetSpecies(pb208);
-        sequenceCell.setBaselineReferences(new ArrayList<>(Arrays.asList("BL1")));
+        sequenceCell.setBaselineReferences(new ArrayList<>(List.of("BL1")));
     }
 
 //    static {
